@@ -3,6 +3,8 @@ Version Next
     - Added new method ThreadLocalContext.invokeWith()
     - Added trace and debug level logging to ThreadLocalContext
     - Fixed bug in AnnotatedXMLEventWriter when namespaces used
+    - Changed AbstractQueryContainer to make it more easily scalable
+      NOTE: backward-incompatible change.
 
 Version 1.0.507 Released August 28, 2012
 
